misc styles and markup

--- a/resources/assets/scss/core/_settings.scss
+++ b/resources/assets/scss/core/_settings.scss
@@ -22,7 +22,7 @@ $gutter: 20px;
 // breakpoints
 $breakpoint-default-feature: 'max-width';
 $break-620 : 620px;
-    // window padding collapses,
+    // window paddi@ng collapses,
     // menu icon movs top left
     // question-nav moves to left and side
     // main logo turns responsive
@@ -30,7 +30,7 @@ $break-620 : 620px;
     // dashboard titles go to centered
 
 $brk-xsmall : 400px;
-    // dropdown arrow on dashboard changes.
+    // dropdown arrow on dashboard: ; changes.
 
 $brk-small : 500px;
     // content has text width 100%
