--- a/resources/assets/scss/core/_base.scss
+++ b/resources/assets/scss/core/_base.scss
@@ -24,10 +24,14 @@ h1.plain {
     font-size: 25px;
     font-weight: bold;
     text-align:center;
+    margin-bottom: 25px;
 
     @include breakpoint($brk-small) {
         font-size: 22px;
         line-height: 25px;
+    }
+    &.margin-bottom {
+        margin-bottom: 25px;
     }
 }
 
