--- a/resources/assets/scss/core/_forms.scss
+++ b/resources/assets/scss/core/_forms.scss
@@ -139,7 +139,7 @@ textarea {
         transform: translateY(-50%);
 
         @include breakpoint($brk-1024) {
-            top: 32%;
+            //top: 32%;
         }
     }
 
