--- a/resources/assets/scss/pages/gratitude/_gratitude.scss
+++ b/resources/assets/scss/pages/gratitude/_gratitude.scss
@@ -1,8 +1,12 @@
 .gratitude-list {
-	input {
-		width: 100%;
-	}
-	li {
-		margin-bottom: 20px;
-	}
+    input {
+        width: 100%;
+    }
+    li {
+        margin-bottom: 20px;
+
+        label {
+            text-align: center;
+        }
+    }
 }
