--- a/resources/assets/scss/pages/sustainable-change/_sustainable-change.scss
+++ b/resources/assets/scss/pages/sustainable-change/_sustainable-change.scss
@@ -1,5 +1,29 @@
 .i-choose {
-	input {
-		width: 100%;
-	}
+    input {
+        width: 100%;
+    }
+}
+
+.i-am {
+    h1.plain {
+        margin-bottom: 25px;
+    }
+}
+
+ol.multiple-sustain {
+    display: block;
+    list-style-type: decimal;
+    margin: 50px 0;
+    padding-left: 40px;
+
+    li {
+        font-weight: 500;
+        margin-bottom: 10px;
+        color: $lightRed;
+    }
+}
+
+blockquote.center{
+    text-align: center;
+    border-image: none;
 }
