--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -34,6 +34,7 @@
 @import "pages/gratitude/gratitude";
 @import "pages/sustainable-change/sustainable-change";
 @import "pages/misc/privacy-terms";
+@import "pages/account/account";
 
 
 // dashboard
