--- a/resources/assets/scss/pages/boomerang/_boomerang.scss
+++ b/resources/assets/scss/pages/boomerang/_boomerang.scss
@@ -32,6 +32,7 @@
         border-bottom: 1px solid #b5b4b5;
         padding:0 10px;
         line-height: 35px;
+        text-align: left !important;
 
         div {
             width: 11px;
