--- a/resources/assets/scss/pages/contact/_contact.scss
+++ b/resources/assets/scss/pages/contact/_contact.scss
@@ -92,6 +92,12 @@
     .main-copy,
     .terms-container {
         padding-bottom: 30px;
+
+        blockquote {
+            max-width: 445px;
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
 
 }
